Quick fix to positioning of calendar items on mobile

--- a/startup/main.css
+++ b/startup/main.css
@@ -170,16 +170,3 @@ ul {list-style-type: none;}
   background: #DC3545;
   color: white !important
 }
-
-@media screen and (max-width:720px) {
-  .weekdays li, .days li {width: 13.1%;}
-}
-
-@media screen and (max-width: 420px) {
-  .weekdays li, .days li {width: 12.5%;}
-  .days li .active {padding: 2px;}
-}
-
-@media screen and (max-width: 290px) {
-  .weekdays li, .days li {width: 12.2%;}
-}
